[package]
name = "dht"
version = "6.4.0"
authors = ["nuh.dev"]
edition = "2021"
description = "Simple, robust, BitTorrent's Mainline DHT implementation"
homepage = "https://github.com/nuhvi/mainline"
license = "MIT"
keywords = ["bittorrent", "torrent", "dht", "kademlia", "mainline"]
categories = ["network-programming"]
repository = "https://github.com/nuhvi/mainline"
exclude = ["/docs/*", "/examples/*", "/beps/*"]

[dependencies]
getrandom = "0.3"
serde_bencode = "^0.2.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
crc = "3.2.1"
sha1_smol = "1.0.1"
ed25519-dalek = "=3.0.0-pre.1"
iroh-base = { version = "0.97", default-features = false, features = ["key"] }
tracing = "0.1"
lru = { version = "0.13.0", default-features = false }
dyn-clone = "1.0.18"
tokio = { version = "1", default-features = false, features = ["sync", "net", "time", "rt", "macros"] }
futures-core = "0.3"
n0-error = "0.1"
noq-udp = "0.9"

[dev-dependencies]
clap = { version = "4.5.29", features = ["derive"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
ctrlc = "3.4.5"
histo = "1.0.0"
rayon = "1.10"
dashmap = "6.1"
colored = "3.0.0"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
