[package]
name = "n0-mainline"
version = "0.1.0"
authors = ["n0 team", "Ruediger Klaehn <rklaehn@protonmail.com>", "nuh.dev"]
edition = "2024"
rust-version = "1.85"
description = "Async BitTorrent Mainline DHT client"
homepage = "https://github.com/n0-computer/n0-mainline"
documentation = "https://docs.rs/n0-mainline"
license = "MIT OR Apache-2.0"
keywords = ["bittorrent", "torrent", "dht", "kademlia", "mainline"]
categories = ["network-programming"]
repository = "https://github.com/n0-computer/n0-mainline"
readme = "README.md"
exclude = ["/docs/*", "/examples/*", "/beps/*"]

[features]
default = []
# Enables APIs related to signed peers, which is not yet a published BEP
# and is therefore considered unstable.
unstable_signed_peers = []

[dependencies]
rand = "0.10"
serde_bencode = "^0.2.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
crc = "3.2.1"
sha1_smol = "1.0.1"
ed25519-dalek = "=3.0.0-pre.6"
tracing = "0.1"
lru = { version = "0.13.0", default-features = false }
dyn-clone = "1.0.18"
tokio = { version = "1", default-features = false, features = ["sync", "net", "time", "rt", "macros"] }
futures-core = "0.3"
n0-error = "0.1"
noq-udp = "0.10"

[dev-dependencies]
clap = { version = "4.5.29", features = ["derive"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
ctrlc = "3.4.5"
histo = "1.0.0"
rayon = "1.10"
dashmap = "6.1"
colored = "3.0.0"
anyhow = "1"
chrono = "0.4"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "announce_signed_peer"
required-features = ["unstable_signed_peers"]

[[example]]
name = "get_signed_peers"
required-features = ["unstable_signed_peers"]
